# pURL

./: Cargo.toml
migrations/: 20260615042401_initialization.sql
purl-bin/: Cargo.toml
purl-bin/src/components/: mod.rs
src/: main.rs  purl.rs
src/components/: console_pane.rs  explorer_pane.rs
src/utilities/: collections.rs
